--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>#DATACRUNCH - Learning data skills to open reality</title>
+<title>#JOURNOCODERS - Learning data skills to open reality</title>
 
 <!-- Google fonts -->
 <link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -40,7 +40,7 @@
           <div class="container">
             <div class="navbar-header">
               <!-- Logo Starts -->
-              <a class="navbar-brand" href="http://thebootstrapthemes.com/live/thebootstrapthemes-monkeydigital/index.php#home">#DATACRUNCH</a>
+              <a class="navbar-brand" href="http://thebootstrapthemes.com/live/thebootstrapthemes-monkeydigital/index.php#home">#JOURNOCODERS</a>
               <!-- #Logo Ends -->
 
 
@@ -84,7 +84,7 @@
 
 
 <!-- main banner-->
-    <h1 class="text-center">#DATACRUNCH</h1>
+    <h1 class="text-center">#JOURNOCODERS</h1>
 <!-- main banner-->
 
 
@@ -238,16 +238,16 @@
       <!-- teste -->
       <div class="row"><h3>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-puzzle-piece"></i>&nbsp;&nbsp;ORGANIZERS</h3>
                <div class="col-md-4">
-            <center><img src="natalia.png" height="150" width="150"><br><br>
-            <h4>Natália Mazotte</h4><br></center>
+            <center><img src="adolfo.png" height="150" width="150"><br><br>
+            <h4>Adolfo Antón Bravo</h4><br></center>
         </div>    
           <div class="col-md-4">
            <center><img src="marco.png" height="150" width="150"><br><br>
           <h4>Marco Túlio Pires</h4><br></center>
        </div>
         <div class="col-md-4">
-           <center><img src="adolfo.png" height="150" width="150"><br><br>
-          <h4>Adolfo Antón Bravo</h4><br></center>
+           <center><img src="natalia.png" height="150" width="150"><br><br>
+          <h4>Natália Mazotte</h4><br></center>
        </div>  
       </div>
                 
