--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
 <!-- main banner-->
     <h1 class="text-center">#JOURNOCODERS</h1>
+    <div class="inscrevase-div"><h2 class="inscrevase"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSJqTAYf6ZG9T5ZHSYlTVjvKEZYV8gv2CFj8hJAUhjZZR8cQ/viewform"><i class="fa fa-user-plus"></i>&nbsp;&nbsp;register</a></h2></div>
 <!-- main banner-->
 
 
