quebra de linha depois dos nomes dos palestrantes

--- a/index.html
+++ b/index.html
@@ -255,35 +255,35 @@
       <div class="row" style="margin-top:30px;"><h3>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-comment"></i>&nbsp;&nbsp;SPEAKERS</h3>
                <div class="col-md-4">
             <center><img src="anaisabel.png" height="150" width="150"></center>
-            <center><h4>Ana Isabel Cordobés (Diario de Navarra)</h4><br></center>
+            <center><h4>Ana Isabel Cordobés (Diario de Navarra)</h4><br><br></center>
                    <p>Data journalist in Diario de Navarra</p>
         </div>    
           <div class="col-md-4">
           <center><img src="bmartinez.png" height="150" width="150"></center>
-          <center><h4>Beatriz Martínez (Visualizados.com)</h4><br></center>
+          <center><h4>Beatriz Martínez (Visualizados.com)</h4><br><br></center>
                    <p>Data journalist in Diario de Navarra</p>
        </div>
         <div class="col-md-4">
           <center><img src="carlos.png" height="150" width="150"></center>
-          <center><h4>Carlos Ordóñez (Bestiario)</h4><br></center>
-
+          <center><h4>Carlos Ordóñez (Bestiario)</h4><br><br></center>
+                   <p>Computer engineer and interactive systems designer</p>
        </div>  
       </div>
     
           <div class="row" style="margin-top:15px;">
                <div class="col-md-4">
             <center><img src="jesus.png" height="150" width="150"></center>
-            <center><h4>Jesús Escudero (El Confidencial)</h4><br></center>
+            <center><h4>Jesús Escudero (El Confidencial)</h4><br><br></center>
                    <p>Data journalist in El Confidencial</p>
         </div>    
           <div class="col-md-4">
           <center><img src="juanluis.png" height="150" width="150"></center>
-          <center><h4>Juan Luis Cano (Python Madrid)</h4><br></center>
+          <center><h4>Juan Luis Cano (Python Madrid)</h4><br><br></center>
                    <p>Evangelist for the Scientific Python community in Spanish languages</p>
        </div>
         <div class="col-md-4">
           <center><img src="marcabra.png" height="150" width="150"></center>
-          <center><h4>Mar Cabra</h4><br></center>
+          <center><h4>Mar Cabra</h4><br><br></center>
                     <p>Head of the ICIJ Data & Research Unit</p>
 
        </div>  
@@ -292,17 +292,17 @@
           <div class="row" style="margin-top:15px;">
                <div class="col-md-4">
             <center><img src="martaley.png" height="150" width="150"></center>
-            <center><h4>Marta Ley (El Mundo)</h4><br></center>
+            <center><h4>Marta Ley (El Mundo)</h4><br><br></center>
                    <p>Data journalist in El Mundo</p>
         </div>    
           <div class="col-md-4">
           <center><img src="pablo.png" height="150" width="150"></center>
-          <center><h4>Pablo Martín (Enreda)</h4><br></center>
+          <center><h4>Pablo Martín (Enreda)</h4><br><br></center>
                    <p>Partner in the cooperative for social transformation Enreda</p>
        </div>
         <div class="col-md-4">
           <center><img src="pilar.png" height="150" width="150"></center>
-          <center><h4>Pilar Velasco (Cadena Ser)</h4><br></center>
+          <center><h4>Pilar Velasco (Cadena Ser)</h4><br><br></center>
                     <p>Journalist at the Spanish leader radio network Cadena Ser</p>
 
        </div>  
@@ -312,12 +312,12 @@
           <div class="row" style="margin-top:15px;">
                <div class="col-md-4">
             <center><img src="santiago.png" height="150" width="150"></center>
-            <center><h4>Santiago Mota</h4><br></center>
+            <center><h4>Santiago Mota</h4><br><br></center>
                    <p>Member of the Group of Users of R Madrid</p>
         </div>    
           <div class="col-md-4">
           <center><img src="veronica.png" height="150" width="150"></center>
-          <center><h4>Verónica Ramírez (La Sexta)</h4><br></center>
+          <center><h4>Verónica Ramírez (La Sexta)</h4><br><br></center>
                    <p>Data journalist in La Sexta</p>
        </div>
         <div class="col-md-4">
